--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "inquirer": "^5.2.0",
     "promptly": "^3.0.3",
+    "prompts": "^0.1.8",
     "slack-api": "^0.1.14"
   }
 }
