--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "inquirer": "^5.2.0",
     "promptly": "^3.0.3",
     "prompts": "^0.1.8",
-    "slack-api": "^0.1.14"
+    "slack-api": "^0.1.14",
+    "xmlhttprequest": "^1.8.0"
   }
 }
